[metadata]
name = recipemd_validator
version = 0.0.1
description = Recursively executes recipemd validation on all *.md files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gindex/recipemd-validator
author = Yevgen Pikus
author_email = yevgen.pikus@gmail.com
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
install_requires =
    argparse
    recipemd
python_requires = >=3.8
zip_safe = False

[options.entry_points]
console_scripts =
    recipemd-validator = recipemd_validator.recipemd_validator:main
